# zfp_rust

./: .gitignore  Cargo.toml  LICENSE  README.md
docs/: paper.tex
src/: codec1.rs  compressor.rs  decode.rs  encode.rs  encode2.rs  encode_decode.rs  float2int.rs  fwd_order.rs  inv_order.rs  lib.rs  main.rs  negbin_convert.rs  serialize.rs
