[package]
name = "zfp_rust"
version = "0.0.1"
authors = ["Maciej Miliszewski<maciejmiliszewski@gmail.com>"]
edition = "2018"
license = "GPL-3.0-or-later"
readme = "README.md"
repository = "https://github.com/maciejjakub/zfp_rust.git"

[dependencies]
bitvec = "0.19.6"
netcdf = "0.4.2"
num-traits = "0.2.14"
